# combinations

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  codecov.yml  travis.yml
.travis/: build-magLac.sh  (+4 more)
app/comparison/: CMakeLists.txt  comparison.cpp
app/stsr/eager-recursive/: CMakeLists.txt  eager-recursive.cpp
app/stsr/lazy-nonrecursive/: CMakeLists.txt  lazy-nonrecursive.cpp
app/stsr/lazy-recursive/: CMakeLists.txt  lazy-recursive.cpp
lab/benchmark/: CMakeLists.txt  benchmark.cpp
lab/benchmark/techniques/eager-recursive/: CMakeLists.txt
lab/benchmark/techniques/eager-recursive/include/: eager-recursive.h  eager-recursive.hpp
lab/benchmark/techniques/eager-recursive/lab/test/: CMakeLists.txt  test-eager-recursive.cpp
lab/benchmark/techniques/lazy-nonrecursive/: CMakeLists.txt
lab/benchmark/techniques/lazy-nonrecursive/include/: Event.h  lazy-nonrecursive.h  lazy-nonrecursive.hpp
lab/benchmark/techniques/lazy-nonrecursive/lab/test/: CMakeLists.txt  test-lazy-nonrecursive.cpp
lab/benchmark/techniques/lazy-recursive/: CMakeLists.txt
lab/benchmark/techniques/lazy-recursive/include/: lazy-recursive.h  lazy-recursive.hpp
lab/benchmark/techniques/lazy-recursive/lab/test/: CMakeLists.txt  test-lazy-recursive.cpp
lab/example/core/multiple-combinator/: CMakeLists.txt  example-multiple-combinator.cpp
lab/example/core/multithread/: CMakeLists.txt  example-multithread.cpp
lab/example/core/single/: CMakeLists.txt  example-single.cpp
lab/example/core/single-thread/multi-set/: CMakeLists.txt  example-multi-set.cpp
lab/example/core/single-thread/single-set/: CMakeLists.txt  example-single-set.cpp
lab/modules/logger/: CMakeLists.txt
lab/modules/logger/src/: logger.cpp
lab/modules/utils/: CMakeLists.txt
lab/modules/utils/src/: mockUtils.cpp
lab/test/: CMakeLists.txt
lab/test/core/base/fundamental-combinator/: CMakeLists.txt  test-fundamental-combinator.cpp
lab/test/core/base/fundamental-combinator/src/: correcteness.cpp  execution.cpp
lab/test/core/base/range/: test-range.cpp
lab/test/core/base/range/src/: correcteness.cpp
lab/test/core/fundamental-combinator/: CMakeLists.txt  test-fundamental-combinator.cpp
lab/test/core/fundamental-combinator/include/: correcteness.h  execution.h
lab/test/core/fundamental-combinator/src/: correcteness.cpp  execution.cpp
lab/test/core/multiple-resolver/: CMakeLists.txt  test-multiple-resolver.cpp
lab/test/core/multiple-resolver/include/: correcteness.h
lab/test/core/multiple-resolver/src/: correcteness.cpp
lab/test/core/multiple/combinator/: CMakeLists.txt  test-multiple-combinator.cpp
lab/test/core/multiple/combinator/src/: correcteness.cpp
lab/test/core/multiple/resolver/: test-multiple-resolver.cpp
lab/test/core/multiple/resolver/src/: correcteness.cpp
lab/test/core/multithread/: CMakeLists.txt  test-multithread.cpp
lab/test/core/multithread/include/: correcteness.h  execution.h
lab/test/core/multithread/src/: correcteness.cpp  execution.cpp
lab/test/core/range/: CMakeLists.txt  test-range.cpp
lab/test/core/range/include/: correcteness.h
lab/test/core/range/src/: correcteness.cpp
lab/test/core/single/combinator/: CMakeLists.txt  test-single-combinator.cpp
lab/test/core/single/combinator/src/: correcteness.cpp
lab/test/coverage/: CMakeLists.txt  test-coverage.cpp
modules/core/: CMakeLists.txt
modules/core/include/combinations/core/base/: Event.h  FundamentalCombinator.h  Range.hpp
modules/core/include/combinations/core/multiple/: Combinator.h  Combinator.hpp  Resolver.h
modules/core/include/combinations/core/multithread/: MultiThreadLC.h  ThreadControl.h  ThreadInput.h
modules/core/include/combinations/core/single/: Combinator.hpp  Resolver.h
modules/core/include/magLac/: magLac.h  multithread.h
modules/core/lab/example/: CMakeLists.txt
modules/core/lab/example/multiple-combinator/: CMakeLists.txt  example-multiple-combinator.cpp
modules/core/lab/example/multithread/: CMakeLists.txt  example-multithread.cpp
modules/core/lab/example/single/: CMakeLists.txt  example-single.cpp
modules/core/lab/test/: CMakeLists.txt
modules/core/lab/test/fundamental-combinator/: CMakeLists.txt  test-fundamental-combinator.cpp
modules/core/lab/test/large-charge/: CMakeLists.txt
modules/core/lab/test/multiple-combinator/: CMakeLists.txt  test-multiple-combinator.cpp
modules/core/lab/test/multiple-resolver/: CMakeLists.txt  test-multiple-resolver.cpp
modules/core/lab/test/multithread/: CMakeLists.txt  test-multithread.cpp
modules/core/lab/test/range/: CMakeLists.txt  test-range.cpp
modules/core/lab/test/single/: CMakeLists.txt  test-single.cpp
modules/logger/: CMakeLists.txt
modules/logger/include/combinations/logger/: logger.h  logger.hpp
modules/logger/src/: logger.cpp
modules/single-type-multiple-ranges/not-general/: CMakeLists.txt
modules/single-type-multiple-ranges/not-general/include/: IndexableSingleRangeCombinator.h  MultipleRangeCombinator.h
modules/single-type-multiple-ranges/not-general/src/: utils.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/combinations/utils/: displayUtils.h  displayUtils.hpp  mockUtils.h
modules/utils/src/: mockUtils.cpp
multiple-type-multiple-ranges/resolver/: CMakeLists.txt  test-fundamental-combinator.cpp  test-multiple-combinator.cpp  test-multiple-resolver.cpp  test-single.cpp
multiple-type-multiple-ranges/resolver/include/: Event.h  MultipleRangeCombinator.hpp  Range.hpp  SingleRangeCombinator.h  utils.h
multiple-type-multiple-ranges/resolver/include/base/: FundamentalCombinator.h
multiple-type-multiple-ranges/resolver/include/multiple/: Combinator.h  Resolver.h
multiple-type-multiple-ranges/resolver/include/single/: Resolver.h
multiple-type-multiple-ranges/resolver/src/: utils.cpp
single-type-multiple-ranges/general/: CMakeLists.txt  main.cpp
single-type-multiple-ranges/general/include/: CurrentCombination.h  CurrentCombination.hpp  IndexableSingleRangeCombinator.h  MultipleRangeCombinator.h  SingleRangeCombinator.h  SingleRangeCombinator.hpp
(+125 files in other folders)
